# ChangeLog for dev-util/autotoolset
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/autotoolset/Attic/ChangeLog,v 1.6 2007/02/09 03:01:11 flameeyes Exp $

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  01 Jan 2006; Luis Medinas <metalgod@gentoo.org>
  autotoolset-0.11.4-r1.ebuild:
  Added ~amd64 keyword.

  30 Aug 2005; Robin H. Johnson <robbat2@gentoo.org>
  autotoolset-0.11.4-r1.ebuild:
  Stable on x86.

*autotoolset-0.11.4-r1 (18 Jul 2005)

  18 Jul 2005; Robin H. Johnson <robbat2@gentoo.org>
  +autotoolset-0.11.4-r1.ebuild:
  Add pending patch from upstream patch tracker that cleans up aclocal
  warnings and errors (which caused autoheader to fail in some cases).

  07 May 2005; David Holm <dholm@gentoo.org> autotoolset-0.11.4.ebuild:
  Added to ~ppc.

*autotoolset-0.11.4 (09 Oct 2004)

  09 Oct 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Sri Gupta #37494.