@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST autotoolset-0.11.4-misc-pending-upstream-fixes.gz 4087 RMD160 5a8187e862a4fe1615ce41debe08259528d41e86 SHA1 1a32c4ae810ecc9d399d7fc548116030b1160570 SHA256 f071e88ad0d1d7161a93291490d075279859586124defefe31493c6f5706f349
 DIST autotoolset-0.11.4.tar.bz2 1156980 RMD160 d317bf21880b06c2d9523ebc5027b2d09a74e09e SHA1 1a98510c8648fe69e246fa6d4e6d2aee65ddfe96 SHA256 25a33733cf17bf3fa232af8330b64da3b6255ea7a319524a3008f8b6c0b6a02d
-EBUILD autotoolset-0.11.4-r1.ebuild 1034 RMD160 247dbf5cd179a7b15b59fc757fcdd583694cc1f7 SHA1 abf291940f2b6527de077652561b94d85d7b266d SHA256 b66f72b2ce4bdd2d7e68f73dab56f396d23824a87a5b9952a1de0bb9ffe44c82
-MD5 b7f931b50559a8a169d2481eaf6fbea9 autotoolset-0.11.4-r1.ebuild 1034
-RMD160 247dbf5cd179a7b15b59fc757fcdd583694cc1f7 autotoolset-0.11.4-r1.ebuild 1034
-SHA256 b66f72b2ce4bdd2d7e68f73dab56f396d23824a87a5b9952a1de0bb9ffe44c82 autotoolset-0.11.4-r1.ebuild 1034
-MISC ChangeLog 1033 RMD160 cab333833222b05603283b3b8344c6d68bc48313 SHA1 f2c67156fbe6340b95f9586c9de525c85cbfd301 SHA256 1d54ca59555ef695dad62e6ef8de924f48aafe89c05bdb739d33694709319864
-MD5 24d5d20df90f0ee5da9949323c2368a6 ChangeLog 1033
-RMD160 cab333833222b05603283b3b8344c6d68bc48313 ChangeLog 1033
-SHA256 1d54ca59555ef695dad62e6ef8de924f48aafe89c05bdb739d33694709319864 ChangeLog 1033
+EBUILD autotoolset-0.11.4-r1.ebuild 1117 RMD160 d13a004062c78c0a2e789051177214ec096d3314 SHA1 f66df3e1c18c54dedc914072615412a9e75769fc SHA256 30ea791ac9e2d045b7a53ab42cedacfe3292f1759b83b7a588b5700eec3a129c
+MD5 2e7773a5c8f618c9acce2a8de532ba65 autotoolset-0.11.4-r1.ebuild 1117
+RMD160 d13a004062c78c0a2e789051177214ec096d3314 autotoolset-0.11.4-r1.ebuild 1117
+SHA256 30ea791ac9e2d045b7a53ab42cedacfe3292f1759b83b7a588b5700eec3a129c autotoolset-0.11.4-r1.ebuild 1117
+MISC ChangeLog 1160 RMD160 8c806a23c22237b6b9a67d5fc1b41b0054229425 SHA1 11c412ebe4eff4edd9d6dd65fb96af0f680c2bf3 SHA256 98ce2161163e02c377452b78e6c7ca08f80cb132b9fbf70ced92a5a63be0e300
+MD5 57559be3b6d48d56c453263c6c4321f1 ChangeLog 1160
+RMD160 8c806a23c22237b6b9a67d5fc1b41b0054229425 ChangeLog 1160
+SHA256 98ce2161163e02c377452b78e6c7ca08f80cb132b9fbf70ced92a5a63be0e300 ChangeLog 1160
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -19,9 +19,9 @@ MD5 1ddde0e4f112b2cd065c4e62371c6d71 files/digest-autotoolset-0.11.4-r1 584
 RMD160 71941a181444bba4cb75cbce0be8f8c655f23cbc files/digest-autotoolset-0.11.4-r1 584
 SHA256 8965995d682c319f3bda779a9090b2dfe1436ba1759c6ed6df75b36ddad57d4e files/digest-autotoolset-0.11.4-r1 584
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.2 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFFy+P9AiZjviIA2XgRAlC8AJ4kNQTyig5Rs/gyoWlgBxT0NGRxIgCfVU/+
-vBxhtyN+rRkIAvNonWjJsMw=
-=gLvg
+iD8DBQFHlyyQNQqtfCuFneMRAg+wAJ98yFWsIQ8d1f2zGPLSaKUobfxHWwCggHmH
+D87I+vt+gsQok4r96sBxgeU=
+=xgEu
 -----END PGP SIGNATURE-----
