@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/autotoolset/Attic/autotoolset-0.11.4-r1.ebuild,v 1.4 2006/01/01 20:57:11 metalgod Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/autotoolset/Attic/autotoolset-0.11.4-r1.ebuild,v 1.5 2008/01/23 12:00:37 opfer Exp $
 
 inherit eutils fixheadtails
 
@@ -27,6 +27,11 @@ src_unpack() {
 	# http://sourceforge.net/tracker/index.php?func=detail&aid=1107954&group_id=75790&atid=545068
 	epatch "${DISTDIR}"/${P}-misc-pending-upstream-fixes.gz
 	ht_fix_file src/gpl/gpl.sh
+}
+
+src_compile() {
+	econf EMACS=no || die "econf failed"
+	emake || die "emake failed"
 }
 
 src_install() {
